2003-01-18  Falk Hueffner  <falk@debian.org>

	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: add Alpha CPU families.
	* libop/op_events.h: make op_event.cpu_mask u32, since we now have
	  more than 16 CPU types
	* libop/op_hw_config.h: bump OP_MAX_COUNTERS to 20 for Alpha
	* libop/op_events.c: add Alpha events
	* daemon/opd_cookie.h: add dcookie syscall number for Alpha
	* utils/op_help.c (main): add help string for Alpha

2003-01-18  John Levon  <levon@movementarian.org>

	* module/Makefile.in:
	* module/x86/Makefile.in:
	* module/ia64/Makefile.in: kernel headers are too fubar
	  for -Werror. So I'm taking my ball home.

2003-01-17  John Levon  <levon@movementarian.org>

	* HACKING:
	* doc/CodingStyle: add

2003-01-17  John Levon  <levon@movementarian.org>

	* TODO: some updates

2003-01-15  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_model_p4.c: pmc_setup_one_p4_counter() show clearly
	  than event == 0 is an error

2003-01-15  John Levon  <levon@movementarian.org>

	* utils/opcontrol: prefer oprofiled/op_help binaries in the same
	  dir as opcontrol

2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: rename OP_P4_HT2 to OP_P4_ALL

2003-01-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libop++/op_print_event.cpp: no event,nor unit mask for CPU_TIMER_INT,
	  problem reported by Ka Fai Lu.

2003-01-12  John Levon  <levon@movementarian.org>

	From Graydon Hoare

	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: add P4 HT

	* libop/op_events.c: tag P4 HT events

2003-01-11   Randolph Chung  <tausq@debian.org>

	* daemon/oprofiled.c: fix ELF sniff

2003-01-11  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c: bail out immediately on dcookie
	  lookup failure.

2003-01-10  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.h: insulate against missing arch support
	  for sys_lookup_dcookie

	* daemon/opd_image.c: use the above

2003-01-10  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c: